JumpScript/tests/baselines/reference/unusedPrivateMethodInClass1.errors.txt
tests/cases/compiler/unusedPrivateMethodInClass1.jump(2,13): error TS6133: 'function1' is declared but its value is never read.
tests/cases/compiler/unusedPrivateMethodInClass1.jump(3,13): error TS6133: 'y' is declared but its value is never read.


==== tests/cases/compiler/unusedPrivateMethodInClass1.jump (2 errors) ====
    class greeter {
        private function1() {
                ~~~~~~~~~
!!! error TS6133: 'function1' is declared but its value is never read.
            var y = 10;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
            y++;
        }
    }